[REFACTOR] Move throw exception to service and change person request and response type